# ocamldai

./: .gitignore  Dockerfile.opam  Dockerfile.pin  Makefile
oasis/: _oasis
oasis/src/: test.ml
